fixed spacing of cards

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,7 +1,10 @@
+:host {
+    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+}
+
 .cards {
     display: flex;
     justify-content: space-evenly;
-    padding-top: 5vh;
 }
 
 .card {
@@ -15,4 +18,9 @@
     justify-content: space-evenly;
     width: 100%;
     height: 100%;
+    padding-top: 7vh;
+}
+
+.cards:last-child {
+    padding-bottom: 7vh;
 }
